--- a/src/stylesheet.html
+++ b/src/stylesheet.html
@@ -42,11 +42,11 @@
     position: absolute;
     inset: 0;
     background-size: 25% 25%;
-    background-image: linear-gradient(to right, rgba(255,255,255,0.05) 1px, transparent 1px),
-                      linear-gradient(to bottom, rgba(255,255,255,0.05) 1px, transparent 1px);
+    background-image: linear-gradient(to right, rgba(255,255,255,0.15) 1px, transparent 1px),
+                      linear-gradient(to bottom, rgba(255,255,255,0.15) 1px, transparent 1px);
   }
-  .axis-center-h { position: absolute; top: 50%; left: 0; right: 0; height: 1px; background: rgba(255,255,255,0.2); }
-  .axis-center-v { position: absolute; left: 50%; top: 0; bottom: 0; width: 1px; background: rgba(255,255,255,0.2); }
+  .axis-center-h { position: absolute; top: 50%; left: 0; right: 0; height: 1px; background: rgba(255,255,255,0.5); }
+  .axis-center-v { position: absolute; left: 50%; top: 0; bottom: 0; width: 1px; background: rgba(255,255,255,0.5); }
   
   .plot-point {
     position: absolute;
@@ -66,7 +66,7 @@
     font-size: 9px;
     font-weight: 800;
     text-transform: uppercase;
-    color: #64748b;
+    color: #cbd5e1;
     letter-spacing: 0.05em;
     pointer-events: none;
   }
