--- a/src/stylesheet.html
+++ b/src/stylesheet.html
@@ -45,8 +45,8 @@
     background-image: linear-gradient(to right, rgba(255,255,255,0.15) 1px, transparent 1px),
                       linear-gradient(to bottom, rgba(255,255,255,0.15) 1px, transparent 1px);
   }
-  .axis-center-h { position: absolute; top: 50%; left: 0; right: 0; height: 1px; background: rgba(255,255,255,0.5); }
-  .axis-center-v { position: absolute; left: 50%; top: 0; bottom: 0; width: 1px; background: rgba(255,255,255,0.5); }
+  .axis-center-h { position: absolute; top: 50%; left: 0; right: 0; height: 1px; background: rgba(255,255,255,0.8); z-index: 10; }
+  .axis-center-v { position: absolute; left: 50%; top: 0; bottom: 0; width: 1px; background: rgba(255,255,255,0.8); z-index: 10; }
   
   .plot-point {
     position: absolute;
@@ -63,12 +63,23 @@
   
   .axis-label {
     position: absolute;
-    font-size: 9px;
+    font-size: 10px;
     font-weight: 800;
     text-transform: uppercase;
-    color: #cbd5e1;
+    color: #f8fafc;
     letter-spacing: 0.05em;
     pointer-events: none;
+    z-index: 20;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.8);
+  }
+
+  .axis-scale {
+    position: absolute;
+    font-size: 8px;
+    font-family: monospace;
+    color: #94a3b8;
+    pointer-events: none;
+    z-index: 20;
   }
 
   /* Carousel Animation */
